# vibe-forge

./: README.md
kevin001/: README.md  pyproject.toml
kevin001/config/: gateway.yaml
kevin001/src/gateway/: __init__.py  app.py  config.py  credentials.py  gateway.py  models.py  router.py
kevin001/src/gateway/operations/: __init__.py  air.py  base.py  registry.py
kevin001/src/gateway/protocols/: __init__.py  base.py  rest.py  soap.py
kevin001/tests/: conftest.py  test_gateway.py
media-station/: Cargo.toml  README.md
media-station/src/: api.rs  config.rs  db.rs  exif_parser.rs  main.rs  models.rs  scanner.rs  thumbnail.rs
media-station/static/: app.js  index.html  style.css
stevessr/: .env.example  Cargo.toml  README.md
stevessr/config/: default.toml  development.toml  production.toml
stevessr/crates/stevessr-api/: Cargo.toml
stevessr/crates/stevessr-api/src/: app.rs  lib.rs  state.rs
stevessr/crates/stevessr-api/src/extractors/: current_user.rs  json_or_form.rs  mod.rs  pagination.rs
stevessr/crates/stevessr-api/src/middleware/: auth.rs  rate_limit.rs
stevessr/crates/stevessr-api/src/routes/: about.rs  badges.rs  bookmarks.rs  categories.rs  directory.rs  drafts.rs  groups.rs  health.rs  invites.rs  mod.rs  notifications.rs  polls.rs  post_actions.rs  posts.rs  review.rs  search.rs  session.rs  site.rs  tags.rs  topics.rs  uploads.rs  users.rs  websocket_handler.rs
stevessr/crates/stevessr-api/src/serializers/: category.rs  mod.rs  post.rs  topic.rs  user.rs
stevessr/crates/stevessr-api/src/websocket/: mod.rs
stevessr/crates/stevessr-cache/: Cargo.toml
stevessr/crates/stevessr-cache/src/: anonymous_cache.rs  connection.rs  distributed_mutex.rs  lib.rs  site_settings_cache.rs  topic_list_cache.rs  user_cache.rs
stevessr/crates/stevessr-core/: Cargo.toml
stevessr/crates/stevessr-core/src/: config.rs  constants.rs  error.rs  events.rs  lib.rs
stevessr/crates/stevessr-core/src/traits/: guardian.rs  mod.rs  serializable.rs  validatable.rs
stevessr/crates/stevessr-core/src/types/: enums.rs  ids.rs  mod.rs  notification_level.rs  trust_level.rs
stevessr/crates/stevessr-db/: Cargo.toml
stevessr/crates/stevessr-db/src/: lib.rs  pool.rs
stevessr/crates/stevessr-db/src/models/: api_key.rs  api_key_scope.rs  backup.rs  badge.rs  badge_grouping.rs  badge_type.rs  bookmark.rs  category.rs  category_group.rs  category_tag.rs  category_user.rs  chat_channel.rs  chat_draft.rs  chat_membership.rs  chat_mention.rs  chat_message.rs  chat_reaction.rs  chat_thread.rs  color_scheme.rs  directory_item.rs  draft.rs  email_log.rs  email_token.rs  form_template.rs  group.rs  group_custom_field.rs  group_history.rs  group_user.rs  incoming_email.rs  invite.rs  invited_user.rs  mod.rs  notification.rs  optimized_image.rs  permalink.rs  plugin_store_row.rs  poll.rs  poll_option.rs  poll_vote.rs  post.rs  (+50 more)
stevessr/crates/stevessr-db/src/queries/: category_list.rs  chat_channel_list.rs  directory.rs  group_list.rs  mod.rs  notification_list.rs  post_list.rs  reviewable_list.rs  tag_list.rs  topic_list.rs  user_search.rs
stevessr/crates/stevessr-jobs/: Cargo.toml
stevessr/crates/stevessr-jobs/src/: lib.rs  runner.rs  scheduler.rs  traits.rs
stevessr/crates/stevessr-jobs/src/jobs/: bookmark_reminder.rs  cleanup.rs  directory_refresh.rs  emit_webhook.rs  grant_trust_level.rs  mod.rs  process_post.rs  reindex_search.rs  send_email.rs  update_badges.rs  update_hot_scores.rs
stevessr/crates/stevessr-markdown/: Cargo.toml
stevessr/crates/stevessr-markdown/src/: lib.rs  pipeline.rs  sanitizer.rs
stevessr/crates/stevessr-markdown/src/features/: code_block.rs  details.rs  emoji.rs  hashtag.rs  image.rs  mention.rs  mod.rs  onebox.rs  poll.rs  quote.rs  spoiler.rs  table.rs
stevessr/crates/stevessr-plugin-api/: Cargo.toml
stevessr/crates/stevessr-plugin-api/src/: config_schema.rs  context.rs  error.rs  events.rs  extension.rs  ffi.rs  hooks.rs  lib.rs  lifecycle.rs  manifest.rs  permissions.rs  store.rs  version.rs
stevessr/crates/stevessr-plugin-host/: Cargo.toml
stevessr/crates/stevessr-plugin-host/src/: event_bus.rs  extension_registry.rs  health.rs  hook_dispatcher.rs  hot_reload.rs  inter_plugin.rs  kv_store.rs  lib.rs  migration_runner.rs  native_runtime.rs  registry.rs  sandbox.rs  wasm_runtime.rs
stevessr/crates/stevessr-server/: Cargo.toml
stevessr/crates/stevessr-server/src/: main.rs
stevessr/crates/stevessr-services/: Cargo.toml
stevessr/crates/stevessr-services/src/: facades.rs  guardian.rs  lib.rs
stevessr/crates/stevessr-services/src/admin/: api_keys.rs  backups.rs  badges.rs  dashboard.rs  logs.rs  mod.rs  plugins.rs  reports.rs  site_settings.rs  users.rs  (+1 more)
stevessr/migrations/: 0001_initial_schema.sql  0002_seed_data.sql
stevessr/plugins/example-native-plugin/: Cargo.toml  Plugin.toml
stevessr/plugins/example-native-plugin/src/: lib.rs
stevessr/plugins/example-wasm-plugin/: Cargo.toml  Plugin.toml
stevessr/plugins/example-wasm-plugin/src/: lib.rs
stevessr/tools/cli/: Cargo.toml
stevessr/tools/cli/src/: main.rs
stevessr/tools/plugin-sdk/: Cargo.toml
stevessr/tools/plugin-sdk/src/: lib.rs
再靠近一点就要融化/: README.md  pyproject.toml
再靠近一点就要融化/docs/superpowers/plans/: 2026-04-08-research-agent.md
再靠近一点就要融化/docs/superpowers/specs/: 2026-04-08-research-agent-design.md
再靠近一点就要融化/src/research_agent/: arxiv.py  cli.py  config.py  executor.py  models.py  orchestrator.py  workspace.py
再靠近一点就要融化/src/research_agent/llm/: __init__.py  base.py  openai_responses.py
再靠近一点就要融化/tests/: __init__.py  test_arxiv.py  test_cli.py  test_models.py  test_multi_cycle.py  test_package_import.py  test_research_loop.py
浣熊/: README.md  config.example.yaml  pyproject.toml
浣熊/raccoon/: __main__.py  cli.py  config.py  database.py  reporter.py  runner.py  scheduler.py
浣熊/raccoon/benchmarks/: __init__.py  agent_loop.py  base.py  basic_call.py  json_output.py  streaming.py  tool_use.py
浣熊/raccoon/dashboard/: app.py
浣熊/raccoon/dashboard/templates/: index.html
浣熊/raccoon/providers/: __init__.py  anthropic_.py  base.py  openai_compat.py
(+520 files in other folders)
