[package]
name = "media-station"
version = "0.1.0"
edition = "2021"
description = "Lightweight high-performance LAN media station"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
image = "0.25"
walkdir = "2"
kamadak-exif = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
rayon = "1"
tokio-util = { version = "0.7", features = ["io"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
