[package]
name = "stevessr-markdown"
version.workspace = true
edition.workspace = true

[dependencies]
stevessr-core = { workspace = true }
pulldown-cmark = { workspace = true }
ammonia = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
slug = { workspace = true }
